project/static/css/main.css
/*
  ORANGE:   #FF6600
  BROWN:    #924F19
  DARK B:   #6F3E0D
  CREAM:    #fcebcb
  YELLOW:   #ffea00
*/

body {
  height: 100%;
  background: url(/static/images/leaves.png) center -100px repeat;
  padding-bottom: 40px;
}

.jumbotron.main {
  padding-left: 0;
  padding-right: 0;
  background: url(/static/images/leaves.png) center center repeat;
}
.jumbotron.main h1 {
  margin-top: 5px;
}
.jumbotron h1 {
  color: #FF6600;
  text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
}
.jumbotron {
  background: transparent;
}
.jumbotron p {
  color: #fff;
  font-weight: 100;
  line-height: 1.6em;
  margin: 0.5em auto;
  max-width: 800px;
  padding-left: 15px;
  padding-right: 15px;
  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.75);
}
@media (-webkit-min-device-pixel-ratio: 1.5) {
  .jumbotron p {
    font-weight: 200;
  }
}

.cta-img {
  height: 60px;
  margin: 13px auto 0;
  display: block;
}

.marketing {
  color: #924F19;
}
.marketing h1, .marketing h4 {
  color: #FF6600;
}
.marketing.qa {
  padding-bottom: 50px;
}
.register {
  background: #6F3E0D;
}
.register h1 {
  margin-top: -5px;
}

.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
  color: #ffea00;
}
.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
  color: #ffea00;
}
.navbar-default .navbar-text {
  color: #FFF;
}
a.navbar-text {
  color: #FFF;
  text-decoration:none;
}
a.navbar-text:hover {
  color: #ffea00;
  text-decoration:none;
}
@media (max-width: 768px) {
  .navbar-right {
    text-align: center;
    padding: 5px 0 11.5px;
  }
}
.admin .navbar+.row {
  margin-top: 20px;
}

.form-control {
  border: 2px solid #FF6600;
}

.input-group-addon {
  color: #555;
  border: 2px solid #FF6600;
  background: #F9EFDB;
}

.jumbotron .form-control.no-border {
  border-color: transparent;
}

.jumbotron .form-control.no-border:focus {
  border-color: #FF6600;
}

.form-control {
  color: #555;
}
.form-control::-webkit-input-placeholder {
  color: #bbb;
  transition: color 0.5s ease, border-color 0.5s ease;
  -webkit-transition: color 0.5s ease, border-color 0.5s ease;
  -webkit-appearance:none;
}

form-control:-moz-placeholder {
   color: #bbb;
   transition: color 0.5s ease, border-color 0.5s ease;
}

form-control:-ms-input-placeholder {
   color: #bbb;
   transition: color 0.5s ease, border-color 0.5s ease;
}

.form-control:focus, .form-control:focus::-webkit-input-placeholder {
   color: #FF6600;
}
.form-control:focus, .form-control:focus:-moz-placeholder { /* Firefox 18- */
   color: #FF6600;
}
.form-control:focus, .form-control:focus::-moz-placeholder {  /* Firefox 19+ */
   color: #FF6600;
}
.form-control:focus, .form-control:focus:-ms-input-placeholder {
   color: #FF6600;
}

.has-error .help-block, .has-error .control-label, .has-error .radio, .has-error .checkbox, .has-error .radio-inline, .has-error .checkbox-inline {
  color: #FF8A8A;
  text-shadow: 1px 1px 7px rgba(0,0,0,0.6);
}

h1.billing-title {
  margin-bottom: 0.7em;
  font-size: 4em;
}

.billing .form-group {
  text-align: left;
  color: #fcebcb;
}

.billing .btn-group i {
  margin-right: 0.5em;
}

.billing .btn-group .btn {
  color: #555;
  background: #fff;
  border: 2px solid #FF6600;
  font-size: 1.2em;
  line-height: 1.2;
}

.billing .btn-group .btn.active {
  box-shadow: inset 0px 0px 7px rgba(255, 103, 0, 1);
}

.billing .btn-group .btn.active i {
  color: #FF6600;
}

.control-label {
  font-size: 1.2em;
  line-height: 1.8em;
}

.form-horizontal .has-feedback .form-control-feedback {
  top: 1em;
}

.form-full-width .form-control {
  width: 70%;
  font-size: 1.5em;
  text-align: left;
}

.help-block {
  color: #fcebcb;
}

.has-success .form-control, .has-success .form-control:focus, .has-success .input-group span {
  border-color: #FF6600;
}

.has-success .control-label, .has-success .input-group span, .has-success .help-block {
  color: inherit;
}

.has-success .input-group span {
  background: #F9EFDB;
  color: #555;
}

.donation-thank-you {
  display: none;
  width: 140px;
  text-align: right;
  margin-right: 33px;
  top: 0.36em !important;
  color: #028F05;
}

.visible-active {
  display: none !important;
}

.active .visible-active {
  display: inline-block !important;
}

.cust-btn{
  display: inline-block;
  padding: 6px 12px;
  margin-bottom: 0;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
  text-decoration: none;
  text-transform: none;
  font-weight: normal;
}

.btn-prereg {
   margin-top: 20px;
  -webkit-border-radius: 8;
  -moz-border-radius: 8;
  border-radius: 8px;
  font-family: Arial;
  color: #ffffff;
  font-size: 1.5em;
  background: #FF6600;
  padding: 20px 40px 20px 40px;
  text-decoration: none;
  border:none;
  -webkit-appearance:none;
  text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
}
.btn-prereg:hover {
  color: #fff;
  text-decoration: none;
}
.btn-billing {
   /*margin-top: 20px;*/
  color: #ffffff;
  background: #FF6600;
}
@media (max-width: 767px){
  .form-control {
    width: 100%;
  }
  .form-control {
    line-height: 1em
  }
  .form-full-width .form-control {
    font-size: 1.25em
  }
  h1.billing-title {
    font-size: 2.5em
  }
  .btn-prereg{
    font-size: 1.25em;
    padding: 14px 26px;
    margin: 10px 0;
  }
  .btn-billing{
    font-size: 1em;
    padding: 10px 0px 10px 0px;
    width:100px
  }
  .cta-img {
    margin: 0px auto 12px;
  }
}

